--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,6 +16,10 @@
         <servlet-name>AddQuestionServlet</servlet-name>
         <servlet-class>controller.AddQuestionServlet</servlet-class>
     </servlet>
+        <servlet>
+        <servlet-name>SessionDestroyServlet</servlet-name>
+        <servlet-class>controller.SessionDestroyServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>QuestionServlet</servlet-name>
         <url-pattern>/QuestionServlet</url-pattern>
@@ -23,6 +27,10 @@
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SessionDestroyServlet</servlet-name>
+        <url-pattern>/SessionDestroyServlet</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>AddUserServlet</servlet-name>
