Eliminación de hebra para el mecanismo del cronómetro

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -185,6 +185,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=TodoTestWeb.war
+war.name=TodoTestWebWH.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
